Your descriptive commit message

--- a/games.html
+++ b/games.html
@@ -144,9 +144,9 @@
 </div>
 
         
-<div class="card" onclick="launchGame('games/game21.html')">
+<div class="card" onclick="launchGame('games/emulator.html')">
   <img src="images/game21.png">
-  <div class="game-title">Coming Soon</div>
+  <div class="game-title">EmulatorJS</div>
 </div>
 
 <div class="card" onclick="launchGame('games/game21.html')">
