Update proxy URLs in button onclick handlers

--- a/proxy.html
+++ b/proxy.html
@@ -112,14 +112,14 @@
       <h1>Select a Proxy</h1>
 
       <button onclick="
-        document.getElementById('proxyFrame').src='https://mathlete-education.b-cdn.net/';
+        document.getElementById('proxyFrame').src='/error.html?code=502';
         document.getElementById('proxySelect').style.display='none';
       ">
         Scramjet
       </button>
 
       <button onclick="
-        document.getElementById('proxyFrame').src='https://clever-assets-6b.b-cdn.net/error.html?code=502';
+        document.getElementById('proxyFrame').src='https://prty-learning.b-cdn.net/';
         document.getElementById('proxySelect').style.display='none';
       ">
         Ultraviolet
