--- a/games.html
+++ b/games.html
@@ -306,14 +306,14 @@
   <div class="game-title">Bad Ice-Cream</div>
 </div>
 
-    <div class="card" onclick="launchGame('games/Soon.html')">
+    <div class="card" onclick="launchGame('games/Bad Ice Cream 2.html')">
   <img src="images/bic2.png">
   <div class="game-title">Bad Ice-Cream 2</div>
 </div>
 
-    <div class="card" onclick="launchGame('games/Soon.html')">
+    <div class="card" onclick="launchGame('games/Bad Ice Cream 3.html')">
   <img src="images/bic3.png">
-  <div class="game-title">Bad Ice-Cream 3 (Soon)</div>
+  <div class="game-title">Bad Ice-Cream 3</div>
 </div>
 
     <div class="card" onclick="launchGame('games/Soon.html')">
