--- a/proxy.html
+++ b/proxy.html
@@ -112,14 +112,14 @@
       <h1>Select a Proxy</h1>
 
       <button onclick="
-        document.getElementById('proxyFrame').src='/error.html?code=502';
+        document.getElementById('proxyFrame').src='https://elar-learning.b-cdn.net';
         document.getElementById('proxySelect').style.display='none';
       ">
         Scramjet
       </button>
 
       <button onclick="
-        document.getElementById('proxyFrame').src='https://prty-learning.b-cdn.net/';
+        document.getElementById('proxyFrame').src='https://prty-teachings.b-cdn.net/';
         document.getElementById('proxySelect').style.display='none';
       ">
         Ultraviolet
