Add 'Kart Bros' game card to games.html
Added a new game card for 'Kart Bros' with an image and launch function.

--- a/games.html
+++ b/games.html
@@ -343,7 +343,13 @@
   <div class="game-title">The World's Hardest Game 4</div>
 </div>
 
+    
+    <div class="card" onclick="launchGame('games/clkartbros.html')">
+  <img src="images/kartbro_512x512.png">
+  <div class="game-title">Kart Bros</div>
+</div>
 
+    
     <div class="card" onclick="launchGame('games/Soon.html')">
   <img src="images/son.png">
   <div class="game-title">Soon</div>
