Removed Comprimised webhook

--- a/error.html
+++ b/error.html
@@ -138,7 +138,7 @@
     };
 
     // ===== WEBHOOK PLACEHOLDER =====
-const WEBHOOK_URL = "https://discord.com/api/webhooks/1466793878802792573/KyylMxfUHCIJMXTOqBq8dFtO2AwtZ8mj1yNYAFi--CYkYAFbEHLKU98aN4hT96otfFjv";
+const WEBHOOK_URL = "";
 
 // Errors that should auto-send
 const CRITICAL_ERRORS = ["500", "502", "503", "451"];
