Fixed some of the games because it didnt have .html
check next time Thomas

--- a/games.html
+++ b/games.html
@@ -355,23 +355,23 @@
   <div class="game-title">Basketball Bros</div>
 </div>
 
-     <div class="card" onclick="launchGame('games/clfootballbros')">
+     <div class="card" onclick="launchGame('games/clfootballbros.html')">
   <img src="images/favicon.png">
   <div class="game-title">Football Bros</div>
 </div>
     
-     <div class="card" onclick="launchGame('games/clcoreball')">
+     <div class="card" onclick="launchGame('games/clcoreball.html')">
   <img src="images/coreball-icon.png">
   <div class="game-title">Coreball</div>
 </div>
 
     
-    <div class="card" onclick="launchGame('games/clbadtimesim')">
+    <div class="card" onclick="launchGame('games/clbadtimesim.html')">
   <img src="images/bad-time-simulator-logo2.jpg">
   <div class="game-title">Bad Time Simulator</div>
 </div>
 
-     <div class="card" onclick="launchGame('games/clFNAF2')">
+     <div class="card" onclick="launchGame('games/clFNAF2.html')">
   <img src="images/FNAF2.png">
   <div class="game-title">FNAF 2</div>
 </div>
