--- a/games.html
+++ b/games.html
@@ -371,7 +371,37 @@
 </div>
     
     
-    <div class="card" onclick="launchGame('games/Soon.html')">
+    <div class="card" onclick="launchGame('games/Bouncemasters.html')">
+  <img src="images/bouncemasters.png">
+  <div class="game-title">Bouncemaster</div>
+</div>
+
+     <div class="card" onclick="launchGame('games/Camouflage and Sniper.html')">
+  <img src="images/camo&sniper.png">
+  <div class="game-title">Camouflage and Sniper</div>
+</div>
+
+     <div class="card" onclick="launchGame('games/Crazy Cattle 3D.html')">
+  <img src="images/crazycattle3d.png">
+  <div class="game-title">Crazy Cattle 3D</div>
+</div>
+
+     <div class="card" onclick="launchGame('games/Fruit Ninja.html')">
+  <img src="images/fruitninja.png">
+  <div class="game-title">Fruit Ninja</div>
+</div>
+
+     <div class="card" onclick="launchGame('games/Soon.html')">
+  <img src="images/son.png">
+  <div class="game-title">Soon</div>
+</div>
+
+     <div class="card" onclick="launchGame('games/Soon.html')">
+  <img src="images/son.png">
+  <div class="game-title">Soon</div>
+</div>
+
+     <div class="card" onclick="launchGame('games/Soon.html')">
   <img src="images/son.png">
   <div class="game-title">Soon</div>
 </div>
