Add new game cards for Bloons TD series

--- a/games.html
+++ b/games.html
@@ -391,15 +391,21 @@
   <div class="game-title">Fruit Ninja</div>
 </div>
 
-     <div class="card" onclick="launchGame('games/Soon.html')">
-  <img src="images/son.png">
-  <div class="game-title">Soon</div>
+     <div class="card" onclick="launchGame('games/clbloonsTD1.html')">
+  <img src="images/bloonstd1.webp">
+  <div class="game-title">Bloons TD 1</div>
 </div>
 
-     <div class="card" onclick="launchGame('games/Soon.html')">
-  <img src="images/son.png">
-  <div class="game-title">Soon</div>
+    <div class="card" onclick="launchGame('games/clbloonsTD2.html')">
+  <img src="images/bloonstd2.jpg">
+  <div class="game-title">Bloons TD 2</div>
 </div>
+
+    <div class="card" onclick="launchGame('games/clbloonsTD3.html')">
+  <img src="images/bloonstd3.jpg">
+  <div class="game-title">Bloons TD 3</div>
+</div>
+
 
      <div class="card" onclick="launchGame('games/Soon.html')">
   <img src="images/son.png">
