--- a/games.html
+++ b/games.html
@@ -407,11 +407,34 @@
 </div>
 
 
-     <div class="card" onclick="launchGame('games/Soon.html')">
+     <div class="card" onclick="launchGame('games/A Difficult Gane About Climbing.html')">
+  <img src="images/adgac.png">
+  <div class="game-title">A Difficult Gane About Climbing</div>
+</div>
+
+         <div class="card" onclick="launchGame('games/Bank Robbery 3.html')">
+  <img src="images/bankrobbery3.png">
+  <div class="game-title">Bank Robbery 3</div>
+</div>
+
+
+         <div class="card" onclick="launchGame('games/Bloxorz.html')">
+  <img src="images/bloxorz.png">
+  <div class="game-title">Bloxorz</div>
+</div>
+
+
+         <div class="card" onclick="launchGame('games/Bottle Jump 3D.html')">
+  <img src="images/Bottle Jump 3D.png">
+  <div class="game-title">Bottle Jump 3D</div>
+</div>
+
+
+         <div class="card" onclick="launchGame('games/Soon.html')">
   <img src="images/son.png">
   <div class="game-title">Soon</div>
 </div>
-
+    
   </div>
 
 
