--- a/apps.html
+++ b/apps.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Dashboard</title>
-   <link rel="icon" type="image/png" href="assets/canvascloak.png">
+  <link rel="icon" type="image/png" href="assets/canvas.png">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
