--- a/games.html
+++ b/games.html
@@ -3,7 +3,7 @@
 <head>
 
   <title>Dashboard</title>
-   <link rel="icon" type="image/png" href="assets/canvascloak.png">
+  <link rel="icon" type="image/png" href="assets/canvas.png">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
