--- a/movies.html
+++ b/movies.html
@@ -2,16 +2,10 @@
 <html>
 <head>
   <title>Dashboard</title>
-   <link rel="icon" type="image/png" href="assets/canvascloak.png">
+  <link rel="icon" type="image/png" href="assets/canvas.png">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<<<<<<< Updated upstream
-  
-=======
-
-
->>>>>>> Stashed changes
 
 <div class="sidebar" id="sidebar">
   <h2>PRTY</h2>
