--- a/radio.html
+++ b/radio.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>PRTY Radio</title>
+  <title>Dashboard</title>
+    <link rel="icon" type="image/png" href="assets/canvas.png">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/radio.css">
 </head>
