--- a/proxy.html
+++ b/proxy.html
@@ -1,8 +1,8 @@
  <!DOCTYPE html>
 <html>
 <head>
-  <title>Proxy</title>
-  <link rel="icon" type="image/png" href="assets/canvascloak.png">
+  <title>Dashboard</title>  
+ <link rel="icon" type="image/png" href="assets/canvas.png">
   <link rel="stylesheet" href="css/style.css">
 
   <style>
