--- a/movies.html
+++ b/movies.html
@@ -56,15 +56,15 @@
       </a>
     </div>
     <div class="card">
-      <a href="https://drive.google.com/file/d/FILE_ID6/view" target="_blank">
-        <img src="https://via.placeholder.com/200x140.png?text=Movie+6" alt="Movie 6">
-        <div class="game-title">Movie 6</div>
+      <a href="https://drive.google.com/file/d/1IO9Trwip7x-K7kLiyu8r9Ii9RKN2d8d1/view?usp=drive_link" target="_blank">
+        <img src="movies.images/starwarsIII.jpg" alt="Movie 6">
+        <div class="game-title">Star Wars: Episode III</div>
       </a>
     </div>
     <div class="card">
-      <a href="https://drive.google.com/file/d/FILE_ID7/view" target="_blank">
-        <img src="https://via.placeholder.com/200x140.png?text=Movie+7" alt="Movie 7">
-        <div class="game-title">Movie 7</div>
+      <a href="https://drive.google.com/file/d/1E7gPobViLK2oHfs_xTCn8J9HJYR0UF-u/view?usp=sharing" target="_blank">
+        <img src="movies.images/gvskg.jpg" alt="Movie 7">
+        <div class="game-title">Godzilla VS King Ghidora</div>
       </a>
     </div>
     <div class="card">
