--- a/movies.html
+++ b/movies.html
@@ -68,34 +68,34 @@
       </a>
     </div>
     <div class="card">
-      <a href="https://drive.google.com/file/d/FILE_ID8/view" target="_blank">
-        <img src="https://via.placeholder.com/200x140.png?text=Movie+8" alt="Movie 8">
-        <div class="game-title">Movie 8</div>
+      <a href="https://drive.google.com/file/d/1wqkhAlr8ue0mA1ph0Rhd9GkloRSkkTYQ/view?usp=sharing" target="_blank">
+        <img src="movies.images/frankestein.jpg" alt="Movie 8">
+        <div class="game-title">Frankstein</div>
       </a>
     </div>
     <div class="card">
-      <a href="https://drive.google.com/file/d/FILE_ID9/view" target="_blank">
-        <img src="https://via.placeholder.com/200x140.png?text=Movie+9" alt="Movie 9">
-        <div class="game-title">Movie 9</div>
+      <a href="hhttps://drive.google.com/file/d/17keOldBs1J7WErUZbY4-Vfqjht1QpmPZ/view?usp=drive_link" target="_blank">
+        <img src="movies.images/fnaf2.png" alt="Movie 9">
+        <div class="game-title">FNAF Movie 2</div>
       </a>
     </div>
     <div class="card">
-      <a href="https://drive.google.com/file/d/FILE_ID10/view" target="_blank">
-        <img src="https://via.placeholder.com/200x140.png?text=Movie+10" alt="Movie 10">
-        <div class="game-title">Movie 10</div>
+      <a href="https://drive.google.com/file/d/10VboTDzjwf9SAirNma_Q8dSagSVHNaqN/view?usp=drive_link" target="_blank">
+        <img src="movies.images/fnaf.jpg" alt="Movie 10">
+        <div class="game-title">FNAF Movie</div>
       </a>
     </div>
-    <!-- repeat for movies 11–20 -->
+
     <div class="card">
-      <a href="https://drive.google.com/file/d/FILE_ID11/view" target="_blank">
-        <img src="https://via.placeholder.com/200x140.png?text=Movie+11" alt="Movie 11">
-        <div class="game-title">Movie 11</div>
+      <a href="https://drive.google.com/file/d/13L4PzDSma91I-r6nPeyWQilUGoxETvWo/view?usp=drive_link" target="_blank">
+        <img src="movies.images/chainsawman.webp" alt="Movie 11">
+        <div class="game-title">Chainsaw Man: The Movie</div>
       </a>
     </div>
     <div class="card">
-      <a href="https://drive.google.com/file/d/FILE_ID12/view" target="_blank">
-        <img src="https://via.placeholder.com/200x140.png?text=Movie+12" alt="Movie 12">
-        <div class="game-title">Movie 12</div>
+      <a href="https://drive.google.com/file/d/1u88D47ehGQyGkKfCsqMfIt37Ag7c7ycm/view?usp=drive_link" target="_blank">
+        <img src="movies.images/theconjuring.jpg" alt="Movie 12">
+        <div class="game-title">The Conjuring</div>
       </a>
     </div>
     <div class="card">
