--- a/games.html
+++ b/games.html
@@ -450,7 +450,17 @@
   <div class="game-title">Dadish</div>
 </div>
 
-     <div class="card" onclick="launchGame('games/Soon.html')">
+     <div class="card" onclick="launchGame('games/Five Nights at Freddys 3.html')">
+  <img src="images/fnaf3.png">
+  <div class="game-title">FNAF 3</div>
+</div>
+
+         <div class="card" onclick="launchGame('games/Five Nights at Freddys 4.html')">
+  <img src="images/fnaf4.png">
+  <div class="game-title">FNAF 4</div>
+</div>
+
+         <div class="card" onclick="launchGame('games/Soon.html')">
   <img src="images/son.png">
   <div class="game-title">Soon</div>
 </div>
