--- a/movies.html
+++ b/movies.html
@@ -101,7 +101,7 @@
     </div>
     <div class="card">
       <a href="https://drive.google.com/file/d/1ZJWkqS6Y5XO6bRrgCH88rgQZR848Lr8V/view" target="_blank">
-        <img src=movies.images/minions.jpg" alt="Movie 13">
+        <img src="movies.images/minions.jpg" alt="Movie 13">
         <div class="game-title">Minions</div>
       </a>
     </div>
