--- a/games.html
+++ b/games.html
@@ -488,6 +488,61 @@
   <img src="images/Jetpack Joyride.png">
   <div class="game-title">Jetpack Joyride</div>
 </div>
+
+    <div class="card" onclick="launchGame('games/Time Shooter 2.html')">
+  <img src="images/Time Shooter 2.png">
+  <div class="game-title">Time Shooter 2</div>
+</div>
+
+        <div class="card" onclick="launchGame('games/Tomb Of The Mask.html')">
+  <img src="images/Tomb Of The Mask.png">
+  <div class="game-title">Tomb Of The Mask</div>
+</div>
+
+        <div class="card" onclick="launchGame('games/Stacky Dash.html')">
+  <img src="images/Stacky Dash.png">
+  <div class="game-title">Stacky Dash</div>
+</div>
+
+        <div class="card" onclick="launchGame('games/Spiral Roll.html')">
+  <img src="images/Spiral Roll.png">
+  <div class="game-title">Spiral Roll</div>
+</div>
+
+        <div class="card" onclick="launchGame('games/Solar Smash.html')">
+  <img src="images/Solar Smash.png">
+  <div class="game-title">Solar Smash</div>
+</div>
+
+        <div class="card" onclick="launchGame('games/Retro Bowl College.html')">
+  <img src="images/Retro Bowl College.png">
+  <div class="game-title">Retro Bowl College</div>
+</div>
+
+        <div class="card" onclick="launchGame('games/Retro Bowl.html')">
+  <img src="images/Retro Bowl.png">
+  <div class="game-title">Retro Bowl</div>
+</div>
+
+        <div class="card" onclick="launchGame('games/Raft.html')">
+  <img src="images/Raft.png">
+  <div class="game-title">Raft</div>
+</div>
+
+        <div class="card" onclick="launchGame('games/son.html')">
+  <img src="images/son.png">
+  <div class="game-title">Soon</div>
+</div>
+
+        <div class="card" onclick="launchGame('games/son.html')">
+  <img src="images/son.png">
+  <div class="game-title">Soon</div>
+</div>
+
+        <div class="card" onclick="launchGame('games/son.html')">
+  <img src="images/son.png">
+  <div class="game-title">Soon</div>
+</div>
   </div>
 
 
