--- a/proxy.html
+++ b/proxy.html
@@ -7,12 +7,12 @@
 
   <style>
     :root {
-      --prty-bg-1: #0f172a;   /* exact dark blue */
-      --prty-bg-2: #1e3a8a;   /* exact gradient blue */
-      --prty-accent: #2563eb; /* exact button blue */
+      --prty-bg-1: #0f172a;   /* dark blue */
+      --prty-bg-2: #1e3a8a;   /* gradiant blue */
+      --prty-accent: #2563eb; /* button blue */
     }
 
-    /* Fullscreen iframe behind everything */
+    /* fullscreen iframe behind everything */
     .proxy-frame {
       position: fixed;
       inset: 0;
@@ -22,18 +22,18 @@
       z-index: 1;
     }
 
-    /* Container to the right of the sidebar */
+    /* container to right of sidebar */
     .proxy-container {
       position: fixed;
       top: 0;
-      left: 250px; /* your sidebar width */
+      left: 250px; /* sidebar width */
       width: calc(100vw - 250px);
       height: 100vh;
       z-index: 9000;
       pointer-events: none;
     }
 
-    /* prty-learning gradient background */
+    /* prty background */
     .proxy-select-screen {
       width: 100%;
       height: 100%;
@@ -46,7 +46,7 @@
       box-sizing: border-box;
     }
 
-    /* Floating white card */
+    /* white card */
     .proxy-card {
       background: white;
       width: 420px;
@@ -92,7 +92,7 @@
 
 <body class="proxy-page">
 
-<!-- SIDEBAR (unchanged) -->
+
 <div class="sidebar" id="sidebar">
   <h2>PRTY</h2>
   <a href="index.html">Home</a>
@@ -119,7 +119,7 @@
       </button>
 
       <button onclick="
-        document.getElementById('proxyFrame').src='https://studying-hub.b-cdn.net/';
+        document.getElementById('proxyFrame').src='https://prty-educational-lessons.b-cdn.net';
         document.getElementById('proxySelect').style.display='none';
       ">
         Ultraviolet
@@ -128,7 +128,7 @@
   </div>
 </div>
 
-<!-- FULLSCREEN IFRAME -->
+<!-- this is so not vibe coded -->
 <iframe id="proxyFrame" class="proxy-frame" allow="fullscreen" loading="lazy"></iframe>
 
 <script src="js/main.js"></script>
