--- a/games.html
+++ b/games.html
@@ -549,29 +549,24 @@
   <div class="game-title">Raft Wars</div>
 </div>
 
-     <div class="card" onclick="launchGame('games/son.html')">
-  <img src="images/son.png">
-  <div class="game-title">Soon</div>
+     <div class="card" onclick="launchGame('games/Guess Their Answer.html')">
+  <img src="images/Guess Their Answer.png">
+  <div class="game-title">Guess Their Answer</div>
 </div>
 
-     <div class="card" onclick="launchGame('games/son.html')">
-  <img src="images/son.png">
-  <div class="game-title">Soon</div>
+     <div class="card" onclick="launchGame('games/Fallout.html')">
+  <img src="images/Fallout.png">
+  <div class="game-title">Fallout</div>
 </div>
 
-     <div class="card" onclick="launchGame('games/son.html')">
-  <img src="images/son.png">
-  <div class="game-title">Soon</div>
+     <div class="card" onclick="launchGame('games/Endroll.html')">
+  <img src="images/Endroll.png">
+  <div class="game-title">Endroll</div>
 </div>
 
-     <div class="card" onclick="launchGame('games/son.html')">
-  <img src="images/son.png">
-  <div class="game-title">Soon</div>
-</div>
-
-     <div class="card" onclick="launchGame('games/son.html')">
-  <img src="images/son.png">
-  <div class="game-title">Soon</div>
+     <div class="card" onclick="launchGame('games/Five Nights at Candys 2.html')">
+  <img src="images/Five Nights at Candys 2.png">
+  <div class="game-title">Five Nights at Candy's 2</div>
 </div>
 
      <div class="card" onclick="launchGame('games/son.html')">
