--- a/proxy.html
+++ b/proxy.html
@@ -88,6 +88,15 @@
       to   { opacity: 1; transform: translateY(0); }
     }
   </style>
+
+ <script async src="https://www.googletagmanager.com/gtag/js?id=G-326RR7JZR2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-326RR7JZR2');
+</script>
 </head>
 
 <body class="proxy-page">
