--- a/games.html
+++ b/games.html
@@ -6,6 +6,14 @@
   <link rel="icon" type="image/png" href="assets/canvas.png">
   <link rel="stylesheet" href="css/style.css">
 </head>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-326RR7JZR2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-326RR7JZR2');
+</script>
 <body>
   
 <div id="loading-screen-prty">
