Update links to external resources in index.html

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>Dashboard</title>
-  <link rel="icon" type="image/png" href="assets/canvas.png">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" type="image/png" href="https://cdn.jsdelivr.net/gh/luisofficialbusiness-afk/PRTY-Source-Code@main/assets/canvas.png">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/luisofficialbusiness-afk/PRTY-Source-Code@main/css/style.css">
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-326RR7JZR2"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
